apps/management/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: management
  labels:
    name: management
