apps/management/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: homepage
  namespace: management
  labels:
    app.kubernetes.io/name: homepage
spec:
  rules:
    - host: "localhost"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  name: http
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: portainer
  namespace: management
  labels:
    io.portainer.kubernetes.application.stack: portainer
    app.kubernetes.io/name: portainer
    app.kubernetes.io/instance: portainer
spec:
  rules:
    - host: "portainer.localhost"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: portainer
                port:
                  name: http
